fixed styling on navbar overlapping

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,6 +1,6 @@
 .navbarbg {
   background-color: black;
-  width: 100%;
+  width: 80vw;
   position: fixed;
   top: 0;
   height: 30px;
